[package]
name = "v1"
version = "0.0.1"
edition = "2021"
description = "A pinocchio-based AMM contract"
readme = "README.md"

[lib]
crate-type = ["cdylib"]

[dependencies]
num-rational = "0.4.2"
pinocchio = { git = "https://github.com/anza-xyz/pinocchio", branch = "main" }
pinocchio-associated-token-account = { git = "https://github.com/anza-xyz/pinocchio", branch = "main" }
pinocchio-log = { git = "https://github.com/anza-xyz/pinocchio", branch = "main" }
pinocchio-pubkey = { git = "https://github.com/anza-xyz/pinocchio", branch = "main" }
pinocchio-system = { git = "https://github.com/anza-xyz/pinocchio", branch = "main" }
pinocchio-token = { git = "https://github.com/anza-xyz/pinocchio", branch = "main" }
shank = "0.4.2"
thiserror = "2.0.12"

[dev-dependencies]
solana-sdk = "1.18"
solana-program-test = "1.18"

[features]
no-entrypoint = []
test = ["no-entrypoint"]

[profile.release]
opt-level = "z"
lto = true
codegen-units = 1
panic = "abort"
strip = true
