[package]
name = "v1"
version = "0.0.1"
edition = "2021"
description = "A pinocchio-based AMM contract"
readme = "README.md"

[lib]
crate-type = ["cdylib"]

[dependencies]
num-rational = "0.4.2"

# Pinocchio crates (always track main)
pinocchio = { git = "https://github.com/anza-xyz/pinocchio", branch = "main" }
pinocchio-associated-token-account = { git = "https://github.com/anza-xyz/pinocchio", branch = "main" }
pinocchio-log = { git = "https://github.com/anza-xyz/pinocchio", branch = "main" }
pinocchio-pubkey = { git = "https://github.com/anza-xyz/pinocchio", branch = "main" }
pinocchio-system = { git = "https://github.com/anza-xyz/pinocchio", branch = "main" }
pinocchio-token = { git = "https://github.com/anza-xyz/pinocchio", branch = "main" }

shank = "0.4.2"
thiserror = "2.0.12"

# Solana / Agave
agave-feature-set = "2.3"
solana-pubkey = "2.4.0"         # bump to resolve conflicts
solana-program = "2.0.12"
solana-sdk = "2.0.12"

[dev-dependencies]
mollusk-svm = "0.4.2"           # latest mollusk
solana-program-test = "2.0.12"

[features]
no-entrypoint = []
test = ["no-entrypoint"]

[profile.release]
opt-level = "z"
lto = true
codegen-units = 1
panic = "abort"
strip = true
